--- a/css/style.css
+++ b/css/style.css
@@ -161,7 +161,12 @@ background-image: url(../images/tealeavesbackground.jpg);
 width: 100%;
 height: 100%;
 border-radius: 16px;
+}
 
+@media(max-width: 768px){
+    .bg-stuff p {
+    
+    }
 }
 
 .link {
@@ -203,22 +208,30 @@ border-radius: 16px;
 .my-bio {
     margin-top: 16px;
     margin-right: 10px;
+    max-width: 30%;
     background-color: var(--avocado);
     border: 3px solid var(--polygreen);
     border-radius: 16px;
 } 
 
-.my-bio h3 {
+.my-bio h2 {
     color: var(--white);
     text-align: center;
-    font-size: 1rem;
+    font-size: 2rem;
     padding: 8px;
 }
 
 .my-bio p {
     color: var(--white);
-    text-align: center;
-    padding: 3px;
+    text-align: left;
+    font-size: 1.25rem;
+    padding: 8px;
+}
+
+@media(max-width: 768px) {
+    .my-bio p {
+       font-size: .75rem; 
+    }
 }
 
 /* page two */
@@ -230,18 +243,25 @@ border-radius: 16px;
     border: 3px solid var(--polygreen); 
     border-radius: 16px;
     margin: 16px;
-    padding: 30px;
+    padding: 24px;
     position: relative;
 
     /* border: 3px solid blue;  */
 }
 
-.coding {
-    
+.Coding {
+    text-decoration: var(--white);
     flex-grow: 1; /* Allow the child div to grow to fill available space */
     flex-basis: 100%; /* Set the initial width of the child div to 100% */
     min-width: 50%; /* Set the minimum width of the child div to 50% */
 } 
+.Coding h2, h3 {
+    justify-content: center;
+    text-align: center;
+}
+.Coding p {
+    padding-top: 24px;
+}
 
 .langlogobg {
     background-image: url(../images/langlogobg.png);
@@ -253,9 +273,6 @@ border-radius: 16px;
     height: 100%;
     opacity: 0.1;
     z-index: 2;
-}
-
-.coding h2 {
 }
 
 #articles {
@@ -272,11 +289,9 @@ border-radius: 16px;
    }
 }
 .books {
+    position: relative;
     width: 50%;
     background-color: var(--flax);
-    background-image: url(../images/bookbg.png);
-    background-size: cover;
-    background-repeat: no-repeat;
     border: 3px solid var(--polygreen); 
     border-radius: 16px;
     margin: 16px;
@@ -287,6 +302,21 @@ border-radius: 16px;
     text-align: center;
     text-decoration: var(--polygreen);
 }
+.bookbg {
+    background-image: url(../images/bookbg.png);
+    content: "";
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+    opacity: 0.1;
+    z-index: 3;
+}
+.books p {
+    text-decoration: var(--polygreen);
+    font-size: 1rem;
+}
 
 @media(max-width: 768px){
     .books {
@@ -294,14 +324,13 @@ border-radius: 16px;
     }
 }
 .tea {
+    position: relative;
     width: 50%;
     background-color: var(--ferngreen);
-    background-image: url(../images/teabg.png);
-    background-size: cover;
-    background-repeat: no-repeat;
     border: 3px solid var(--polygreen); 
     border-radius: 16px;
     margin: 16px;
+    text-decoration: var(--white);
 }
 
 .tea h2 {
@@ -310,8 +339,21 @@ border-radius: 16px;
     color: var(--white)
 }
 .tea p {
-    text-decoration: var(--white);
+    ;
+    font-size: 1rem;
     padding: 36px;
+}
+
+.teabg {
+    background-image: url(../images/teabg.png);
+    content: "";
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    width: 100%;
+    height: 100%;
+    opacity: 0.1;
+    z-index: 2;  
 }
 @media(max-width: 768px){
     .tea {
